# system-design-showcase

./: .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
async_app/: urls.py  views.py
async_app/tests/: test_async.py
blocker_tracker/: apps.py  urls.py  views.py
blocker_tracker/templates/: base.html
system_design_project/: asgi.py  client_session.py  settings.py  urls.py  wsgi.py
system_design_project/settings/: base.py
